var searchData=
[
  ['accepted_0',['Accepted',['../namespacegtirb.html#ad7db2026ea49abab0562fd0cf344a00ba382ab522931673c11e398ead1b7b1678',1,'gtirb']]],
  ['addauxdata_1',['addAuxData',['../_aux_data_container_8hpp.html#a322c627cc61e2e2577635560cc5be707',1,'addAuxData():&#160;AuxDataContainer.hpp'],['../classgtirb_1_1_aux_data_container.html#ade11a028eac4d13cd2414bdb4b7e10e2',1,'gtirb::AuxDataContainer::addAuxData()']]],
  ['addblock_2',['addBlock',['../classgtirb_1_1_byte_interval.html#aa8f01446fb6e3fcdea2a4f4c86e915bf',1,'gtirb::ByteInterval::addBlock(uint64_t Off, CodeBlock *N)'],['../classgtirb_1_1_byte_interval.html#a019f94b6345c87726872ad9bd5eb664d',1,'gtirb::ByteInterval::addBlock(uint64_t Off, DataBlock *N)'],['../classgtirb_1_1_byte_interval.html#ad239f11f34051bd7c536c3c903738641',1,'gtirb::ByteInterval::addBlock(Context &amp;C, uint64_t O, Args &amp;&amp;... A)']]],
  ['addbyteinterval_3',['addByteInterval',['../classgtirb_1_1_section.html#ac2048b84700b8a4b497b476a3db44316',1,'gtirb::Section::addByteInterval(ByteInterval *BI)'],['../classgtirb_1_1_section.html#aa19aaec9fe8e42c0bb81db269c65674e',1,'gtirb::Section::addByteInterval(Context &amp;C, Args &amp;&amp;... A)']]],
  ['addcodeblocks_4',['addCodeBlocks',['../classgtirb_1_1_byte_interval_observer.html#a56457be25c1be0df54207cbe890dfb82',1,'gtirb::ByteIntervalObserver::addCodeBlocks()'],['../classgtirb_1_1_module_observer.html#af52db5a4af2431a2a91d59075d640170',1,'gtirb::ModuleObserver::addCodeBlocks()'],['../classgtirb_1_1_section_observer.html#a0e131786876e0ed52d28ca14c0e3fddb',1,'gtirb::SectionObserver::addCodeBlocks(Section *S, Section::code_block_range Blocks)=0']]],
  ['adddatablocks_5',['addDataBlocks',['../classgtirb_1_1_section_observer.html#a2fc460e5727e91cb1d2502a53e84a675',1,'gtirb::SectionObserver::addDataBlocks()'],['../classgtirb_1_1_byte_interval_observer.html#a8e53a049d1bca06faad45b40359c1ed8',1,'gtirb::ByteIntervalObserver::addDataBlocks()']]],
  ['addedge_6',['addEdge',['../group___c_f_g___g_r_o_u_p.html#ga8a20702c5f700c156869681cecb40e61',1,'gtirb']]],
  ['addflag_7',['addFlag',['../classgtirb_1_1_sym_attribute_set.html#ae3576ba11aed6e18fe3a702e43d37fea',1,'gtirb::SymAttributeSet::addFlag()'],['../classgtirb_1_1_section.html#a0d4492ebd5d7a5e2254806038e5884c5',1,'gtirb::Section::addFlag()']]],
  ['addflags_8',['addFlags',['../classgtirb_1_1_sym_attribute_set.html#a4f4e1a1306d5107d84fe09e434b0e8c3',1,'gtirb::SymAttributeSet::addFlags()'],['../classgtirb_1_1_section.html#a3abb48e065487c7921e44b79a7c088bb',1,'gtirb::Section::addFlags()']]],
  ['addmodule_9',['addModule',['../classgtirb_1_1_i_r.html#a42646d7ad42b1e1ca7206945cdf2cdf9',1,'gtirb::IR::addModule(Context &amp;C, Args... A)'],['../classgtirb_1_1_i_r.html#afe1dc3ecab51dacd2299d155b93b3643',1,'gtirb::IR::addModule(Module *M)']]],
  ['addproxyblock_10',['addProxyBlock',['../classgtirb_1_1_module.html#a7639da1b902bc1b8c1db7de6fa5fe293',1,'gtirb::Module::addProxyBlock(Context &amp;C, Args &amp;&amp;... A)'],['../classgtirb_1_1_module.html#aabf5319b5a2907b6b66ccfcf67907880',1,'gtirb::Module::addProxyBlock(ProxyBlock *PB)']]],
  ['addproxyblocks_11',['addProxyBlocks',['../classgtirb_1_1_module_observer.html#ae461df92d65fb49dae8a52897d2892ab',1,'gtirb::ModuleObserver']]],
  ['addr_12',['Addr',['../classgtirb_1_1_addr.html#ad87a709c7fb1ffa66f70cf2c0c32ab07',1,'gtirb::Addr::Addr() noexcept'],['../classgtirb_1_1_addr.html#a7a29924d0f95ee58376be833a2dfc634',1,'gtirb::Addr::Addr(value_type X) noexcept'],['../classgtirb_1_1_addr.html',1,'gtirb::Addr']]],
  ['addr_2ehpp_13',['Addr.hpp',['../_addr_8hpp.html',1,'']]],
  ['addressless_14',['AddressLess',['../structgtirb_1_1_byte_interval_1_1_symbolic_expression_element_base_1_1_address_less.html',1,'gtirb::ByteInterval::SymbolicExpressionElementBase']]],
  ['addresslimit_15',['addressLimit',['../classgtirb_1_1_addr.html#ab71cf47517e8350df35b83ed7b53d5d8',1,'gtirb::Addr']]],
  ['addressrange_16',['addressRange',['../classgtirb_1_1_addr.html#add36c3d6cfab0d36687f5f282c9200fb',1,'gtirb::Addr']]],
  ['addrrange_17',['AddrRange',['../classgtirb_1_1_addr_range.html#a1c05faf1d0075b736b46ea2950b1e751',1,'gtirb::AddrRange::AddrRange(Addr Lower, Addr Upper) noexcept'],['../classgtirb_1_1_addr_range.html#aedcf179c463f5c053cece4d117ead903',1,'gtirb::AddrRange::AddrRange(Addr Lower, uint64_t Count) noexcept'],['../classgtirb_1_1_addr_range.html',1,'gtirb::AddrRange']]],
  ['addrrelgot_18',['AddrRelGot',['../group___s_y_m_b_o_l_i_c___e_x_p_r_e_s_s_i_o_n___g_r_o_u_p.html#ggaf355ba250fa93bf7aeea480b6f4e6df5a6c17b411200088457b8b340d7362462b',1,'gtirb']]],
  ['addsection_19',['addSection',['../classgtirb_1_1_module.html#a6560c5fd1471e80957cd4ebc50ff97d8',1,'gtirb::Module::addSection(Context &amp;C, Args &amp;&amp;... A)'],['../classgtirb_1_1_module.html#a99d01833b92364354ab6c53bae1d42c4',1,'gtirb::Module::addSection(Section *S)']]],
  ['addsymbol_20',['addSymbol',['../classgtirb_1_1_module.html#acabd0a3f03d8854a3ce18545d25062ca',1,'gtirb::Module::addSymbol(Symbol *S)'],['../classgtirb_1_1_module.html#a54bbc2376a7c2753a69056beafbc9678',1,'gtirb::Module::addSymbol(Context &amp;C, Args... A)']]],
  ['addsymbolicexpression_21',['addSymbolicExpression',['../classgtirb_1_1_byte_interval.html#a74e4791188ab46a92d1242f337eba656',1,'gtirb::ByteInterval::addSymbolicExpression(uint64_t Off, const SymbolicExpression &amp;SymExpr)'],['../classgtirb_1_1_byte_interval.html#a75d01fa068e0484d58f374d2c128d0f2',1,'gtirb::ByteInterval::addSymbolicExpression(uint64_t Off, Args... A)']]],
  ['addvertex_22',['addVertex',['../group___c_f_g___g_r_o_u_p.html#gaab44a89bb681c95a710cd225e17bf324',1,'gtirb']]],
  ['adjusted_23',['Adjusted',['../group___s_y_m_b_o_l_i_c___e_x_p_r_e_s_s_i_o_n___g_r_o_u_p.html#ggaf355ba250fa93bf7aeea480b6f4e6df5ad369707e750af93e50dedd9f536fcabc',1,'gtirb']]],
  ['alignaddr_24',['alignAddr',['../_allocator_8hpp.html#a89af0728d24894f19dd9bd8024f2eeb5',1,'Allocator.hpp']]],
  ['alignment_25',['Alignment',['../structgtirb_1_1schema_1_1_alignment.html',1,'gtirb::schema']]],
  ['alignmentadjustment_26',['alignmentAdjustment',['../_allocator_8hpp.html#a5d8ef330f0b08b70e784a80fcd80317a',1,'Allocator.hpp']]],
  ['allocate_27',['Allocate',['../class_bump_ptr_allocator_impl.html#aa32970944dbbabe4d1fbd3379c4e5fc2',1,'BumpPtrAllocatorImpl::Allocate(size_t Size, size_t Alignment)'],['../class_bump_ptr_allocator_impl.html#a6b53b6e38bd37e0bc9b3b872f9db75ee',1,'BumpPtrAllocatorImpl::Allocate(size_t Num=1)'],['../class_specific_bump_ptr_allocator.html#a6fdd189936477d34f492fd3828169d6d',1,'SpecificBumpPtrAllocator::Allocate()']]],
  ['allocator_2ehpp_28',['Allocator.hpp',['../_allocator_8hpp.html',1,'']]],
  ['argument_5ftype_29',['argument_type',['../structstd_1_1hash_3_01gtirb_1_1_sym_stack_const_01_4.html#a98dac394fc1d8cd40cf91673f1628b1c',1,'std::hash&lt; gtirb::SymStackConst &gt;::argument_type()'],['../structstd_1_1hash_3_01gtirb_1_1_sym_addr_const_01_4.html#ade0762e4f16027bb70c5a4a9ac3b6a6b',1,'std::hash&lt; gtirb::SymAddrConst &gt;::argument_type()'],['../structstd_1_1hash_3_01gtirb_1_1_sym_addr_addr_01_4.html#ac0a78fc7ce63ee85e9eec3fb72282a6c',1,'std::hash&lt; gtirb::SymAddrAddr &gt;::argument_type()']]],
  ['arm_30',['ARM',['../namespacegtirb.html#a3a3936a9fcf87b0ae27bca9ac7b91b85a47f45e65244c17ec9fa8771a5c6d60e1',1,'gtirb']]],
  ['arm64_31',['ARM64',['../namespacegtirb.html#a3a3936a9fcf87b0ae27bca9ac7b91b85ab9b55c80d095761ac7757ced0fedadc4',1,'gtirb']]],
  ['asoptionalsize_32',['asOptionalSize',['../namespacegtirb.html#a0e6e4b62f3e61aa207bcfe8c13145ab6',1,'gtirb::asOptionalSize(std::optional&lt; uint64_t &gt; X)'],['../namespacegtirb.html#a34bfdae2a08eae72a7d3481862e49119',1,'gtirb::asOptionalSize(uint64_t X)'],['../namespacegtirb.html#a13699455797384d20ed577c270949288',1,'gtirb::asOptionalSize(T X)']]],
  ['attributes_33',['Attributes',['../structgtirb_1_1_sym_addr_addr.html#ad43cdb1026a4297e87fe773f02d96999',1,'gtirb::SymAddrAddr::Attributes()'],['../structgtirb_1_1_sym_addr_const.html#aaefd261e345f9761d83184fd1f4e15f0',1,'gtirb::SymAddrConst::Attributes()'],['../structgtirb_1_1_sym_stack_const.html#a650de8721d8f733bff433a77ee26b7e7',1,'gtirb::SymStackConst::Attributes()']]],
  ['aux_5fdata_34',['aux_data',['../_aux_data_container_8hpp.html#a70f705c91c2697963e3e9ae14bb695fd',1,'aux_data():&#160;AuxDataContainer.hpp'],['../classgtirb_1_1_aux_data_container.html#a1a53231b4cf9d6e389d1716ec04035c5',1,'gtirb::AuxDataContainer::aux_data()']]],
  ['aux_5fdata_5fbegin_35',['aux_data_begin',['../_aux_data_container_8hpp.html#ae2457581e3ddfee45477ce5b86ec3adb',1,'aux_data_begin():&#160;AuxDataContainer.hpp'],['../classgtirb_1_1_aux_data_container.html#a65215721181fc149d02e5dc2cc0d72b2',1,'gtirb::AuxDataContainer::aux_data_begin() const']]],
  ['aux_5fdata_5fend_36',['aux_data_end',['../classgtirb_1_1_aux_data_container.html#a3b633a98ed3139d5e63d9a9d87d2728d',1,'gtirb::AuxDataContainer::aux_data_end()'],['../_aux_data_container_8hpp.html#a05b687976248d795cc5dfa26c2778a68',1,'aux_data_end() const:&#160;AuxDataContainer.hpp']]],
  ['auxdata_37',['AuxData',['../group___a_u_x_d_a_t_a___g_r_o_u_p.html',1,'']]],
  ['auxdata_2ehpp_38',['AuxData.hpp',['../_aux_data_8hpp.html',1,'']]],
  ['auxdata_5ftraits_39',['auxdata_traits',['../structgtirb_1_1auxdata__traits.html',1,'gtirb']]],
  ['auxdatacontainer_40',['AuxDataContainer',['../namespacegtirb.html#a82a0b64dbe417746abe73a30a1fe9ef7',1,'gtirb::AuxDataContainer(Context &amp;C, Kind knd)'],['../namespacegtirb.html#a06724009df3a9eed03beba3471af3df7',1,'gtirb::AuxDataContainer(Context &amp;C, Kind knd, const UUID &amp;U)'],['../classgtirb_1_1_aux_data_container.html',1,'gtirb::AuxDataContainer']]],
  ['auxdatacontainer_2ehpp_41',['AuxDataContainer.hpp',['../_aux_data_container_8hpp.html',1,'']]],
  ['auxdataraw_42',['AuxDataRaw',['../struct_aux_data_raw.html#a2d75d908d840aa12fe23ea1d47fc4c74',1,'AuxDataRaw::AuxDataRaw()'],['../struct_aux_data_raw.html',1,'AuxDataRaw'],['../structgtirb_1_1_aux_data_container_1_1_aux_data_raw.html#a4d1f8fc79a4d9ff07a43367dd2beb08e',1,'gtirb::AuxDataContainer::AuxDataRaw::AuxDataRaw()'],['../structgtirb_1_1_aux_data_container_1_1_aux_data_raw.html',1,'gtirb::AuxDataContainer::AuxDataRaw']]],
  ['auxdataschema_2ehpp_43',['AuxDataSchema.hpp',['../_aux_data_schema_8hpp.html',1,'']]],
  ['auxdataset_44',['AuxDataSet',['../_aux_data_container_8hpp.html#a033111600cde61b177d56b5533426b00',1,'AuxDataContainer.hpp']]],
  ['auxdatatypemap_45',['AuxDataTypeMap',['../namespacegtirb.html#a2fb406e86bf40a7aa01c3fe1a3c7562e',1,'gtirb']]]
];
