var searchData=
[
  ['addauxdata_589',['addAuxData',['../classgtirb_1_1_aux_data_container.html#ade11a028eac4d13cd2414bdb4b7e10e2',1,'gtirb::AuxDataContainer::addAuxData()'],['../_aux_data_container_8hpp.html#a322c627cc61e2e2577635560cc5be707',1,'addAuxData():&#160;AuxDataContainer.hpp']]],
  ['addblock_590',['addBlock',['../classgtirb_1_1_byte_interval.html#aa8f01446fb6e3fcdea2a4f4c86e915bf',1,'gtirb::ByteInterval::addBlock(uint64_t Off, CodeBlock *N)'],['../classgtirb_1_1_byte_interval.html#a019f94b6345c87726872ad9bd5eb664d',1,'gtirb::ByteInterval::addBlock(uint64_t Off, DataBlock *N)'],['../classgtirb_1_1_byte_interval.html#ad239f11f34051bd7c536c3c903738641',1,'gtirb::ByteInterval::addBlock(Context &amp;C, uint64_t O, Args &amp;&amp;... A)']]],
  ['addbyteinterval_591',['addByteInterval',['../classgtirb_1_1_section.html#ac2048b84700b8a4b497b476a3db44316',1,'gtirb::Section::addByteInterval(ByteInterval *BI)'],['../classgtirb_1_1_section.html#aa19aaec9fe8e42c0bb81db269c65674e',1,'gtirb::Section::addByteInterval(Context &amp;C, Args &amp;&amp;... A)']]],
  ['addcodeblocks_592',['addCodeBlocks',['../classgtirb_1_1_byte_interval_observer.html#a56457be25c1be0df54207cbe890dfb82',1,'gtirb::ByteIntervalObserver::addCodeBlocks()'],['../classgtirb_1_1_module_observer.html#af52db5a4af2431a2a91d59075d640170',1,'gtirb::ModuleObserver::addCodeBlocks()'],['../classgtirb_1_1_section_observer.html#a0e131786876e0ed52d28ca14c0e3fddb',1,'gtirb::SectionObserver::addCodeBlocks()']]],
  ['adddatablocks_593',['addDataBlocks',['../classgtirb_1_1_byte_interval_observer.html#a8e53a049d1bca06faad45b40359c1ed8',1,'gtirb::ByteIntervalObserver::addDataBlocks()'],['../classgtirb_1_1_section_observer.html#a2fc460e5727e91cb1d2502a53e84a675',1,'gtirb::SectionObserver::addDataBlocks()']]],
  ['addedge_594',['addEdge',['../group___c_f_g___g_r_o_u_p.html#ga8a20702c5f700c156869681cecb40e61',1,'gtirb']]],
  ['addflag_595',['addFlag',['../classgtirb_1_1_section.html#a0d4492ebd5d7a5e2254806038e5884c5',1,'gtirb::Section::addFlag()'],['../classgtirb_1_1_sym_attribute_set.html#ae3576ba11aed6e18fe3a702e43d37fea',1,'gtirb::SymAttributeSet::addFlag()']]],
  ['addflags_596',['addFlags',['../classgtirb_1_1_section.html#a3abb48e065487c7921e44b79a7c088bb',1,'gtirb::Section::addFlags()'],['../classgtirb_1_1_sym_attribute_set.html#a4f4e1a1306d5107d84fe09e434b0e8c3',1,'gtirb::SymAttributeSet::addFlags()']]],
  ['addmodule_597',['addModule',['../classgtirb_1_1_i_r.html#afe1dc3ecab51dacd2299d155b93b3643',1,'gtirb::IR::addModule(Module *M)'],['../classgtirb_1_1_i_r.html#a42646d7ad42b1e1ca7206945cdf2cdf9',1,'gtirb::IR::addModule(Context &amp;C, Args... A)']]],
  ['addproxyblock_598',['addProxyBlock',['../classgtirb_1_1_module.html#aabf5319b5a2907b6b66ccfcf67907880',1,'gtirb::Module::addProxyBlock(ProxyBlock *PB)'],['../classgtirb_1_1_module.html#a7639da1b902bc1b8c1db7de6fa5fe293',1,'gtirb::Module::addProxyBlock(Context &amp;C, Args &amp;&amp;... A)']]],
  ['addproxyblocks_599',['addProxyBlocks',['../classgtirb_1_1_module_observer.html#ae461df92d65fb49dae8a52897d2892ab',1,'gtirb::ModuleObserver']]],
  ['addr_600',['Addr',['../classgtirb_1_1_addr.html#ad87a709c7fb1ffa66f70cf2c0c32ab07',1,'gtirb::Addr::Addr() noexcept'],['../classgtirb_1_1_addr.html#a7a29924d0f95ee58376be833a2dfc634',1,'gtirb::Addr::Addr(value_type X) noexcept']]],
  ['addresslimit_601',['addressLimit',['../classgtirb_1_1_addr.html#ab71cf47517e8350df35b83ed7b53d5d8',1,'gtirb::Addr']]],
  ['addressrange_602',['addressRange',['../classgtirb_1_1_addr.html#add36c3d6cfab0d36687f5f282c9200fb',1,'gtirb::Addr']]],
  ['addrrange_603',['AddrRange',['../classgtirb_1_1_addr_range.html#a1c05faf1d0075b736b46ea2950b1e751',1,'gtirb::AddrRange::AddrRange(Addr Lower, Addr Upper) noexcept'],['../classgtirb_1_1_addr_range.html#aedcf179c463f5c053cece4d117ead903',1,'gtirb::AddrRange::AddrRange(Addr Lower, uint64_t Count) noexcept']]],
  ['addsection_604',['addSection',['../classgtirb_1_1_module.html#a99d01833b92364354ab6c53bae1d42c4',1,'gtirb::Module::addSection(Section *S)'],['../classgtirb_1_1_module.html#a6560c5fd1471e80957cd4ebc50ff97d8',1,'gtirb::Module::addSection(Context &amp;C, Args &amp;&amp;... A)']]],
  ['addsymbol_605',['addSymbol',['../classgtirb_1_1_module.html#a54bbc2376a7c2753a69056beafbc9678',1,'gtirb::Module::addSymbol(Context &amp;C, Args... A)'],['../classgtirb_1_1_module.html#acabd0a3f03d8854a3ce18545d25062ca',1,'gtirb::Module::addSymbol(Symbol *S)']]],
  ['addsymbolicexpression_606',['addSymbolicExpression',['../classgtirb_1_1_byte_interval.html#a74e4791188ab46a92d1242f337eba656',1,'gtirb::ByteInterval::addSymbolicExpression(uint64_t Off, const SymbolicExpression &amp;SymExpr)'],['../classgtirb_1_1_byte_interval.html#a75d01fa068e0484d58f374d2c128d0f2',1,'gtirb::ByteInterval::addSymbolicExpression(uint64_t Off, Args... A)']]],
  ['addvertex_607',['addVertex',['../group___c_f_g___g_r_o_u_p.html#gaab44a89bb681c95a710cd225e17bf324',1,'gtirb']]],
  ['alignaddr_608',['alignAddr',['../_allocator_8hpp.html#a89af0728d24894f19dd9bd8024f2eeb5',1,'Allocator.hpp']]],
  ['alignmentadjustment_609',['alignmentAdjustment',['../_allocator_8hpp.html#a5d8ef330f0b08b70e784a80fcd80317a',1,'Allocator.hpp']]],
  ['allocate_610',['Allocate',['../class_bump_ptr_allocator_impl.html#aa32970944dbbabe4d1fbd3379c4e5fc2',1,'BumpPtrAllocatorImpl::Allocate(size_t Size, size_t Alignment)'],['../class_bump_ptr_allocator_impl.html#a6b53b6e38bd37e0bc9b3b872f9db75ee',1,'BumpPtrAllocatorImpl::Allocate(size_t Num=1)'],['../class_specific_bump_ptr_allocator.html#a6fdd189936477d34f492fd3828169d6d',1,'SpecificBumpPtrAllocator::Allocate()']]],
  ['asoptionalsize_611',['asOptionalSize',['../namespacegtirb.html#a13699455797384d20ed577c270949288',1,'gtirb::asOptionalSize(T X)'],['../namespacegtirb.html#a34bfdae2a08eae72a7d3481862e49119',1,'gtirb::asOptionalSize(uint64_t X)'],['../namespacegtirb.html#a0e6e4b62f3e61aa207bcfe8c13145ab6',1,'gtirb::asOptionalSize(std::optional&lt; uint64_t &gt; X)']]],
  ['aux_5fdata_612',['aux_data',['../classgtirb_1_1_aux_data_container.html#a1a53231b4cf9d6e389d1716ec04035c5',1,'gtirb::AuxDataContainer::aux_data()'],['../_aux_data_container_8hpp.html#a70f705c91c2697963e3e9ae14bb695fd',1,'aux_data():&#160;AuxDataContainer.hpp']]],
  ['aux_5fdata_5fbegin_613',['aux_data_begin',['../classgtirb_1_1_aux_data_container.html#a65215721181fc149d02e5dc2cc0d72b2',1,'gtirb::AuxDataContainer::aux_data_begin()'],['../_aux_data_container_8hpp.html#ae2457581e3ddfee45477ce5b86ec3adb',1,'aux_data_begin():&#160;AuxDataContainer.hpp']]],
  ['aux_5fdata_5fend_614',['aux_data_end',['../classgtirb_1_1_aux_data_container.html#a3b633a98ed3139d5e63d9a9d87d2728d',1,'gtirb::AuxDataContainer::aux_data_end()'],['../_aux_data_container_8hpp.html#a05b687976248d795cc5dfa26c2778a68',1,'aux_data_end():&#160;AuxDataContainer.hpp']]],
  ['auxdatacontainer_615',['AuxDataContainer',['../namespacegtirb.html#a82a0b64dbe417746abe73a30a1fe9ef7',1,'gtirb::AuxDataContainer(Context &amp;C, Kind knd)'],['../namespacegtirb.html#a06724009df3a9eed03beba3471af3df7',1,'gtirb::AuxDataContainer(Context &amp;C, Kind knd, const UUID &amp;U)']]],
  ['auxdataraw_616',['AuxDataRaw',['../structgtirb_1_1_aux_data_container_1_1_aux_data_raw.html#a4d1f8fc79a4d9ff07a43367dd2beb08e',1,'gtirb::AuxDataContainer::AuxDataRaw::AuxDataRaw()'],['../struct_aux_data_raw.html#a2d75d908d840aa12fe23ea1d47fc4c74',1,'AuxDataRaw::AuxDataRaw()']]]
];
